# vectorize-iris

./: .gitignore  2206.01062v1.md  README.md  RELEASE.md  install.sh  release.sh  test.sh
.github/workflows/: ci.yml  release.yml
examples/: classification.sh  sample.md
nodejs-api/: README.md  jest.config.js  package.json
nodejs-api/examples/: classification.ts
nodejs-api/src/: index.ts  types.ts
nodejs-api/tests/: index.test.ts  integration.test.ts  types.test.ts
python-api/: README.md  pyproject.toml
python-api/examples/: classification.py
python-api/tests/: test_async_client.py  test_integration.py  test_models.py  test_vectorize_iris.py
python-api/vectorize_iris/: __init__.py  async_client.py  client.py  exceptions.py  models.py
rust-cli/: Cargo.toml  README.md  build.sh
rust-cli/src/: main.rs
rust-cli/tests/: integration_test.rs
